# RayTracingTutorial

./: CMakeLists.txt  README.md  image.ppm  main  main.cpp  raytracer.h  rttutorial.h  triangle_test_image.ppm
components/: aabb.h  bvh.h  components.h  dieletric.h  hittable_list.h  lambertian.h  materials.h  materials_and_shapes.h  metal.h  moving_sphere.h  perlin.h  sphere.h  triangle.h
components/hittables/: aabb.h  aarect.h  box.h  bvh.h  constant_medium.h  hittable_list.h  moving_sphere.h  rotate.h  sphere.h  translate.h  triangle.h
components/materials/: dieletric.h  diffuse_light.h  isotropic.h  lambertian.h  metal.h
components/textures/: checker_texture.h  image_texture.h  noise_texture.h  rtt_stb_image.h  rtt_std_image.h  solid_texture.h
generals/: camera.h  color.h  hittable.h  material.h  ppm_image.h  ray.h  texture.h  vec3.h
